New: Added the ChildGroup
